--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,15 @@ tfnntools.egg-info/
 ##################
 .ipynb_checkpoints
 __pycache__
+venv
+.python-version
+
+# data folder
+##############
+data/test_spectrograms_and_derivs_*
+data/sc09
+
+# additional top level
+######################
+saved_results
+*.egg-info
